[package]
name = "yaml-validator-cli"
version = "0.1.1"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2021"
description = "A command-line interface to the yaml-validator library"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "../README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-validator = { "path" = "../yaml-validator", version = "0.2.0" }
clap = { version = "4.1.4", features = ["derive"] }