[package]
name = "yaml-validator"
version = "0.2.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2021"
description = "A library for validating YAML against YAML-defined schemas"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-rust = "0.4.5"
thiserror = "1.0.38"
regex = { "version" = "1.7.1", optional = true }
smallvec = { "version" = "1.10.0", optional = true }

[features]
default = ["regex", "smallvec"]